code clean up
Signed-off-by: Badreddine Hachoumi <badreddine.hachoumi@gmail.com>